syntax = "proto3";

package configuration;

import "aelf/core.proto";
import "google/protobuf/wrappers.proto";
import "aelf/options.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "AElf.Contracts.Configuration";

service Configuration {
    option (aelf.csharp_state) = "AElf.Contracts.Configuration.ConfigurationState";
    // Actions
    rpc SetConfiguration (SetConfigurationInput) returns (google.protobuf.Empty) {
    }
    rpc ChangeConfigurationController (aelf.AuthorityInfo) returns (google.protobuf.Empty) {
    }
    
    // Views
    rpc GetConfiguration (google.protobuf.StringValue) returns (google.protobuf.BytesValue) {
        option (aelf.is_view) = true;
    }
    rpc GetConfigurationController (google.protobuf.Empty) returns (aelf.AuthorityInfo) {
        option (aelf.is_view) = true;
    }
    
}

message SetConfigurationInput {
    string key = 1;
    bytes value = 2;
}

message BlockTransactionLimit
{
    int32 value = 1;
}

// Values

message RequiredAcsInContracts {
    repeated string acs_list = 1;
    bool require_all = 2;
}

// Events

message ConfigurationSet {
    option (aelf.is_event) = true;
    string key = 1;
    bytes value = 2;
}